discussion/kv_engine/170355/170355_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove MEMCACHED_PUBLIC_API

We're linking everythng static these days

Change-Id: I50b6f734e3e4aee4d2d777d496b0ee38df75f8a0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-09 13:13:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-09 14:05:12.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15446/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:131:30: error: variable has incomplete type "class MEMCACHED_PUBLIC_CLASS" [clang-diagnostic-error]
class MEMCACHED_PUBLIC_CLASS Traceable {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:131:7: note: forward declaration of "cb::tracing::MEMCACHED_PUBLIC_CLASS"
class MEMCACHED_PUBLIC_CLASS Traceable {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:132:1: error: expected expression [clang-diagnostic-error]
public:
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:167:30: error: variable has incomplete type "class MEMCACHED_PUBLIC_CLASS" [clang-diagnostic-error]
class MEMCACHED_PUBLIC_CLASS SpanStopwatch {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:131:7: note: forward declaration of "cb::tracing::MEMCACHED_PUBLIC_CLASS"
class MEMCACHED_PUBLIC_CLASS Traceable {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:168:1: error: expected expression [clang-diagnostic-error]
public:
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:213:15: error: unknown type name "Traceable" [clang-diagnostic-error]
    MutexSpan(Traceable* traceable,
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:249:5: error: unknown type name "Traceable" [clang-diagnostic-error]
    Traceable* const traceable;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15446/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tracer.h:131:30:
error: variable has incomplete type "class MEMCACHED_PUBLIC_CLASS" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15446/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43720/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\memcached/dcp.h(370): error C2079: "DcpIface" uses undefined struct "MEMCACHED_PUBLIC_CLASS" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43720/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36886/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/dcp.h:385:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36886/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5096/ : FAILURE

Compile error at [2022-02-09T14:02:00.280Z] ../kv_engine/include/memcached/tracer.h:132:1:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5096/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17175/ : FAILURE

Compile error at [2022-02-09T14:03:23.961Z] ../kv_engine/include/memcached/tracer.h:131:30:
error: variable ?cb::tracing::MEMCACHED_PUBLIC_CLASS cb::tracing::Traceable? has initializer but incomplete type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17484/ : FAILURE

Compile error at [2022-02-09T14:03:41.053Z] ../kv_engine/include/memcached/tracer.h:131:30:
error: variable ?cb::tracing::MEMCACHED_PUBLIC_CLASS cb::tracing::Traceable? has initializer but incomplete type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17484/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18223/ : FAILURE

Compile error at [2022-02-09T14:02:56.478Z] ../kv_engine/include/memcached/dcp.h:385:5:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18223/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25582/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5154/ : FAILURE

Compile error at [2022-02-09T13:38:08.322Z] ../kv_engine/include/memcached/tracer.h:131:30:
error: variable ?cb::tracing::MEMCACHED_PUBLIC_CLASS cb::tracing::Traceable? has initializer but incomplete type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5154/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16263/ : FAILURE

Compile error at [2022-02-09T13:21:56.812Z] ../kv_engine/include/memcached/tracer.h:132:1:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16263/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14289/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
